Redo first week exercises

--- a/html/complex-table/index.html
+++ b/html/complex-table/index.html
@@ -5,9 +5,21 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Complex Table</title>
+        <link rel="icon" href="https://picsum.photos/256" />
+
+        <style>
+            table {
+                border-collapse: collapse;
+            }
+            th,
+            td {
+                border: 1px solid;
+                padding: 0.5em;
+            }
+        </style>
     </head>
     <body>
-        <table border="1">
+        <table>
             <tr>
                 <th scope="col" colspan="2" rowspan="2">Student</th>
                 <th scope="col" colspan="4">Exam</th>
@@ -32,9 +44,9 @@
                 <td>5</td>
                 <td>6</td>
                 <td>7</td>
-                <td>7</td>
-                <th scope="col">s/ A.</th>
-                <th scope="col">c/ A.</th>
+                <td>8</td>
+                <th scope="col">NR</th>
+                <th scope="col">R</th>
             </tr>
             <tr>
                 <td>80549061</td>
