Fix some styling issues

--- a/css/1-online-newspaper/index.html
+++ b/css/1-online-newspaper/index.html
@@ -74,12 +74,7 @@
                         >
                     </h1>
                 </header>
-                <img
-                    src="https://picsum.photos/600/300?business"
-                    alt=""
-                    width="600"
-                    height="300"
-                />
+                <img src="https://picsum.photos/600/300?business" alt="" />
                 <p>
                     Etiam massa magna, condimentum eu facilisis sit amet, dictum
                     ac purus. Curabitur semper nisl vel libero pulvinar
@@ -129,12 +124,7 @@
                         >
                     </h1>
                 </header>
-                <img
-                    src="https://picsum.photos/600/300?city"
-                    alt=""
-                    width="600"
-                    height="300"
-                />
+                <img src="https://picsum.photos/600/300?city" alt="" />
                 <p>
                     Donec magna sapien, feugiat vel commodo et, aliquam in
                     purus. Duis posuere, orci eu mollis lobortis, eros augue
@@ -183,12 +173,7 @@
                         >
                     </h1>
                 </header>
-                <img
-                    src="https://picsum.photos/600/300?nature"
-                    alt=""
-                    width="600"
-                    height="300"
-                />
+                <img src="https://picsum.photos/600/300?nature" alt="" />
                 <p>
                     Nam aliquet leo vel scelerisque sagittis. Praesent hendrerit
                     lectus et augue condimentum, vitae dapibus elit bibendum.
@@ -238,12 +223,7 @@
                         >
                     </h1>
                 </header>
-                <img
-                    src="https://picsum.photos/600/300?transport"
-                    alt=""
-                    width="600"
-                    height="300"
-                />
+                <img src="https://picsum.photos/600/300?transport" alt="" />
                 <p>
                     Nulla facilisi. Proin et lectus dapibus, fermentum nisi a,
                     varius nulla. Sed massa dolor, commodo at iaculis id,
