--- a/css/1-online-newspaper/item.html
+++ b/css/1-online-newspaper/item.html
@@ -74,12 +74,7 @@
                         >
                     </h1>
                 </header>
-                <img
-                    src="https://picsum.photos/600/300?business"
-                    alt=""
-                    width="600"
-                    height="300"
-                />
+                <img src="https://picsum.photos/600/300?business" alt="" />
                 <p>
                     Etiam massa magna, condimentum eu facilisis sit amet, dictum
                     ac purus. Curabitur semper nisl vel libero pulvinar
